# learning_ai

./: .gitignore  AGENTS.md  DEV_AGENTS.md  ROADMAP.md  docker-compose.production.yml  docker-compose.yml
adhd-focus-hub/: .env.example  PROJECT_STATUS.md  README.md  __init__.py  docker-compose.production.yml  docker-compose.yml  requirements.txt  test_tools.py
adhd-focus-hub/.github/: copilot-instructions.md
adhd-focus-hub/backend/: .env  .env.example  Dockerfile  __init__.py  alembic.ini  create_tables.py  pyproject.toml  requirements.txt
adhd-focus-hub/backend/api/: __init__.py  main.py  models.py
adhd-focus-hub/backend/api/routes/: auth.py  chat.py  learning.py  mood.py  organize.py  tasks.py
adhd-focus-hub/backend/config/: settings.py
adhd-focus-hub/backend/crew/: __init__.py  crew.py  exceptions.py
adhd-focus-hub/backend/crew/agents/: __init__.py  base.py  emotion.py  focus.py  learning.py  orchestrator.py  organize.py  planning.py  redis_comm.py
adhd-focus-hub/backend/crew/tools/: __init__.py  emotion_tools.py  focus_tools.py  planning_tools.py
adhd-focus-hub/backend/database/: __init__.py  init.sql  models.py
adhd-focus-hub/backend/migrations/: env.py
adhd-focus-hub/backend/migrations/versions/: 0001_initial.py  0002_conversation_history.py
adhd-focus-hub/backend/services/: cache.py
adhd-focus-hub/design/: agent_roles.md  backend_component_patterns.md  docker_architecture.md  frontend_component_patterns.md  goal.md  primary_agent.md  redis_caching_and_migrations.md  system_arc.md  system_pipeline.md
adhd-focus-hub/dev_agents/: __init__.py  backend_architect.py  backend_developer.py  base.py  docs_writer.py  entry.py  frontend_architect.py  frontend_developer.py  integration_engineer.py  lead_planner.py  project_manager.py  qa_tester.py  testing_engineer.py
adhd-focus-hub/frontend/: .env  Dockerfile  package-lock.json  package.json
adhd-focus-hub/tests/: test_api.py  test_orchestrator.py  test_planning_tools.py
scripts/: dev_compose.sh  install_codex.sh  prod_compose.sh
(+31 files in other folders)
